# sdlwiki

./: APIByCategory.mediawiki  APIContributionStyleGuide.mediawiki  Android.mediawiki  Articles.mediawiki  Books.mediawiki  CategoryAPI.mediawiki  CategoryAssertions.mediawiki  CategoryAtomic.mediawiki  CategoryAudio.mediawiki  CategoryBits.mediawiki  CategoryCPU.mediawiki  CategoryCategory.mediawiki  CategoryClipboard.mediawiki  CategoryDefine.mediawiki  CategoryDraft.mediawiki  CategoryEndian.mediawiki  CategoryEnum.mediawiki  CategoryError.mediawiki  CategoryEvents.mediawiki  CategoryFRect.mediawiki  CategoryFilesystem.mediawiki  CategoryForceFeedback.mediawiki  CategoryGameController.mediawiki  CategoryHints.mediawiki  CategoryIO.mediawiki  CategoryInit.mediawiki  CategoryInput.mediawiki  CategoryJoystick.mediawiki  CategoryKeyboard.mediawiki  CategoryLog.mediawiki  CategoryMouse.mediawiki  CategoryMutex.mediawiki  CategoryPixels.mediawiki  CategoryPlatform.mediawiki  CategoryPower.mediawiki  CategoryRect.mediawiki  CategoryRender.mediawiki  CategorySWM.mediawiki  CategorySensor.mediawiki  CategorySharedObject.mediawiki  (+1006 more)
.github/: CMakeLists.txt  extract_example.py
.github/workflows/: main.yml
SDL2/: APIByCategory.md  APIByCategory.mediawiki  ASSERT_FAIL.md  ASSERT_PASS.md  Android.md  Android.mediawiki  Articles.md  Books.md  Books.mediawiki  CategoryAPI.md  CategoryAPI.mediawiki  CategoryAPICategory.md  CategoryAPIDatatype.md  CategoryAPIEnum.md  CategoryAPIEnumerators.md  CategoryAPIFunction.md  CategoryAPIMacro.md  CategoryAPIStruct.md  CategoryAssert.md  CategoryAssertions.mediawiki  CategoryAtomic.md  CategoryAtomic.mediawiki  CategoryAudio.md  CategoryAudio.mediawiki  CategoryBits.md  CategoryBits.mediawiki  CategoryBlendmode.md  CategoryCPU.mediawiki  CategoryCPUInfo.md  CategoryCategory.mediawiki  CategoryClipboard.md  CategoryClipboard.mediawiki  CategoryDefine.mediawiki  CategoryDraft.mediawiki  CategoryEndian.md  CategoryEndian.mediawiki  CategoryEnum.mediawiki  CategoryError.md  CategoryError.mediawiki  CategoryEvents.md  (+3035 more)
SDL2_image/: CategoryAPI.md  CategoryAPI.mediawiki  CategoryAPIEnumerators.md  CategoryAPIFunction.md  CategoryAPIStruct.md  FrontPage.md  FrontPage.mediawiki  IMG_Animation.md  IMG_FreeAnimation.md  IMG_GetError.md  IMG_INIT_AVIF.md  IMG_INIT_JPG.md  IMG_INIT_JXL.md  IMG_INIT_PNG.md  IMG_INIT_TIF.md  IMG_INIT_WEBP.md  IMG_Init.md  IMG_InitFlags.md  IMG_Linked_Version.md  IMG_Load.md  IMG_LoadAVIF_RW.md  IMG_LoadAnimation.md  IMG_LoadAnimationTyped_RW.md  IMG_LoadAnimation_RW.md  IMG_LoadBMP_RW.md  IMG_LoadCUR_RW.md  IMG_LoadGIFAnimation_RW.md  IMG_LoadGIF_RW.md  IMG_LoadICO_RW.md  IMG_LoadJPG_RW.md  IMG_LoadJXL_RW.md  IMG_LoadLBM_RW.md  IMG_LoadPCX_RW.md  IMG_LoadPNG_RW.md  IMG_LoadPNM_RW.md  IMG_LoadQOI_RW.md  IMG_LoadSVG_RW.md  IMG_LoadSizedSVG_RW.md  IMG_LoadTGA_RW.md  IMG_LoadTIF_RW.md  (+42 more)
SDL2_mixer/: CategoryAPI.md  CategoryAPI.mediawiki  CategoryAPIDatatype.md  CategoryAPIEnum.md  CategoryAPIEnumerators.md  CategoryAPIFunction.md  CategoryAPIMacro.md  CategoryAPIStruct.md  FrontPage.md  FrontPage.mediawiki  MIX_CHANNEL_POST.md  MIX_EFFECTSMAXSPEED.md  MIX_FADING_IN.md  MIX_INIT_FLAC.md  MIX_INIT_MID.md  MIX_INIT_MOD.md  MIX_INIT_MP3.md  MIX_INIT_OGG.md  MIX_INIT_OPUS.md  MIX_INIT_WAVPACK.md  MIX_InitFlags.md  MIX_NO_FADING.md  MUS_CMD.md  MUS_FLAC.md  MUS_GME.md  MUS_MID.md  MUS_MP3.md  MUS_OGG.md  MUS_WAVPACK.md  Mix_AllocateChannels.md  Mix_ChannelFinished.md  Mix_Chunk.md  Mix_ClearError.md  Mix_CloseAudio.md  Mix_EachSoundFont.md  Mix_EffectDone_t.md  Mix_EffectFunc_t.md  Mix_ExpireChannel.md  Mix_FadeInChannel.md  Mix_FadeInChannelTimed.md  (+106 more)
SDL2_net/: CategoryAPI.md  CategoryAPI.mediawiki  CategoryAPIFunction.md  CategoryAPIMacro.md  FrontPage.md  SDLNet_AddSocket.md  SDLNet_AllocPacket.md  SDLNet_AllocPacketV.md  SDLNet_AllocSocketSet.md  SDLNet_CheckSockets.md  SDLNet_DelSocket.md  SDLNet_FreePacket.md  SDLNet_FreePacketV.md  SDLNet_FreeSocketSet.md  SDLNet_GetError.md  SDLNet_GetLocalAddresses.md  SDLNet_Init.md  SDLNet_Linked_Version.md  SDLNet_Quit.md  SDLNet_ResizePacket.md  SDLNet_ResolveHost.md  SDLNet_ResolveIP.md  SDLNet_SetError.md  SDLNet_SocketReady.md  SDLNet_TCP_Accept.md  SDLNet_TCP_AddSocket.md  SDLNet_TCP_Close.md  SDLNet_TCP_DelSocket.md  SDLNet_TCP_GetPeerAddress.md  SDLNet_TCP_Open.md  SDLNet_TCP_OpenClient.md  SDLNet_TCP_OpenServer.md  SDLNet_TCP_Recv.md  SDLNet_TCP_Send.md  SDLNet_UDP_AddSocket.md  SDLNet_UDP_Bind.md  SDLNet_UDP_Close.md  SDLNet_UDP_DelSocket.md  SDLNet_UDP_GetPeerAddress.md  SDLNet_UDP_Open.md  (+9 more)
SDL2_ttf/: CategoryAPI.md  CategoryAPI.mediawiki  CategoryAPIDatatype.md  CategoryAPIEnum.md  CategoryAPIEnumerators.md  CategoryAPIFunction.md  CategoryAPIMacro.md  CategoryAPIStruct.md  FrontPage.md  FrontPage.mediawiki  SDL_TTF_COMPILEDVERSION.md  SDL_TTF_MAJOR_VERSION.md  SDL_TTF_VERSION.md  SDL_TTF_VERSION_ATLEAST.md  TTF_ByteSwappedUNICODE.md  TTF_CloseFont.md  TTF_Direction.md  TTF_Font.md  TTF_FontAscent.md  TTF_FontDescent.md  TTF_FontFaceFamilyName.md  TTF_FontFaceIsFixedWidth.md  TTF_FontFaceStyleName.md  TTF_FontFaces.md  TTF_FontHeight.md  TTF_FontLineSkip.md  TTF_GetError.md  TTF_GetFontHinting.md  TTF_GetFontKerning.md  TTF_GetFontOutline.md  TTF_GetFontStyle.md  TTF_GetFontWrappedAlign.md  TTF_GetFreeTypeVersion.md  TTF_GetHarfBuzzVersion.md  TTF_GlyphIsProvided.md  TTF_GlyphIsProvided32.md  TTF_GlyphMetrics.md  TTF_GlyphMetrics32.md  TTF_HINTING_NORMAL.md  TTF_Init.md  (+67 more)
SDL3/:  [CategoryAndroid](CategoryAndroid).md   [CategoryAssertions](CategoryAssertions).md   [CategoryAtomic](CategoryAtomic).md   [CategoryAudio](CategoryAudio).md   [CategoryCPU](CategoryCPU).md   [CategoryClipboard](CategoryClipboard).md   [CategoryDraft](CategoryDraft).md   [CategoryError](CategoryError).md   [CategoryEvents](CategoryEvents).md   [CategoryFilesystem](CategoryFilesystem).md   [CategoryHeader](CategoryHeader).md  (+6065 more)
(+1482 files in other folders)
